--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.example.dell.facebooklayout.MainActivity">
 
-
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -67,6 +65,17 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="50dp"
                 >
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="33dp"
+                        android:background="@drawable/friendicon"
+                        android:layout_marginLeft="90dp"
+                        android:layout_marginTop="8dp"
+                        android:alpha="0.7"
+                        />
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -85,14 +94,8 @@
                     android:layout_marginLeft="116dp"
                     android:layout_marginTop="5dp"
                     />
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="33dp"
-                    android:background="@drawable/friendicon"
-                    android:layout_marginLeft="90dp"
-                    android:layout_marginTop="8dp"
-                    android:alpha="0.7"
-                    />
+
+                </FrameLayout>
                 <ImageView
                     android:layout_width="32dp"
                     android:layout_height="33dp"
@@ -102,6 +105,16 @@
                     android:alpha="0.5"
 
                     />
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="38dp"
+                        android:background="@drawable/alarm_bell"
+                        android:layout_marginLeft="240dp"
+                        android:layout_marginTop="8dp"
+                        />
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -120,13 +133,8 @@
                     android:layout_marginLeft="262dp"
                     android:layout_marginTop="5dp"
                     />
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="38dp"
-                    android:background="@drawable/alarm_bell"
-                    android:layout_marginLeft="240dp"
-                    android:layout_marginTop="8dp"
-                    />
+
+                </FrameLayout>
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="35dp"
@@ -266,9 +274,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Divya"
+                    android:text="Deepam"
                     android:layout_marginTop="95dp"
-                    android:layout_marginLeft="193dp"
+                    android:layout_marginLeft="183dp"
                     android:textStyle="bold"
                     android:textColor="#000000"
                     android:alpha="0.6"
@@ -287,7 +295,7 @@
                     android:layout_height="60dp"
                     android:layout_marginTop="32dp"
                     android:layout_marginLeft="180dp"
-                    android:background="@drawable/divyathakur2"
+                    android:background="@drawable/deepam"
 
                     />
 
